# Haskell-Project

./: README.md  package-lock.json  symptom-checker.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
public/: index.html  package-lock.json  package.json  server.js
src/: Main.hs  SymptomChecker.hs
