cabal-version:      3.0
name:               symptom-checker
version:            0.1.0.0
synopsis:           A simple symptom checker application
description:        A Haskell application that helps users check their symptoms
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
category:           Health
build-type:         Simple

executable symptom-checker
    main-is:          Main.hs
    other-modules:    SymptomChecker
    build-depends:    base ^>=4.17.0.0,
                     warp >=3.3.0 && <3.4,
                     aeson >=2.0.0 && <3.0,
                     text >=2.0.0 && <3.0,
                     wai >=3.2.0 && <3.3,
                     wai-cors >=0.2.0 && <0.3,
                     bytestring >=0.11.0.0 && <0.12,
                     http-types >= 0.12.0 && < 0.13
    hs-source-dirs:   src
    default-language: Haskell2010 